k8s/apps/utils/torrent/svc-torrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent-torrent
  namespace: torrent
  annotations:
    io.cilium/lb-ipam-ips: 192.168.65.155
spec:
  type: LoadBalancer
  selector:
    app: torrent
  ports:
    - name: torrent-tcp
      port: 10011
      targetPort: torrent-tcp
      protocol: TCP
    - name: torrent-udp
      port: 10011
      targetPort: torrent-udp
      protocol: UDP
