k8s/apps/utils/torrent/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: torrent
  namespace: torrent
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "torrent.k8s.ghiot.be"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: torrent
          port: 80
